[gd_scene load_steps=8 format=3 uid="uid://cpmbinkpmg1ar"]

[ext_resource type="Script" uid="uid://n7pcj01kxxbh" path="res://scripts/readUDPdata.gd" id="1_bi3rc"]
[ext_resource type="PackedScene" uid="uid://dadafubnipytc" path="res://scenes/speedometer.tscn" id="3_meibj"]
[ext_resource type="Script" uid="uid://dd0yw316y0c3y" path="res://scripts/controlDashboard.gd" id="3_nysx1"]
[ext_resource type="PackedScene" uid="uid://40wk2flxvtr8" path="res://scenes/lapDisplay.tscn" id="4_nysx1"]
[ext_resource type="PackedScene" uid="uid://bqledcrq6yvik" path="res://scenes/throttleDisplay.tscn" id="5_gj1ct"]
[ext_resource type="PackedScene" uid="uid://ctr22p8laquv1" path="res://scenes/CarVisu3D.tscn" id="6_f3nql"]

[sub_resource type="GDScript" id="GDScript_bi3rc"]
script/source = "extends Camera2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	var screen_size = get_viewport_rect().size
	var base_resolution = Vector2(1920, 1080)
	zoom = screen_size / base_resolution


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	var screen_size = get_viewport_rect().size
	var base_resolution = Vector2(1920, 1080)
	zoom = screen_size / base_resolution
"

[node name="Dashboard" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 10.0
offset_bottom = 10.0
script = ExtResource("1_bi3rc")

[node name="Camera2D" type="Camera2D" parent="."]
script = SubResource("GDScript_bi3rc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_nysx1")

[node name="Speedometer" parent="Control" instance=ExtResource("3_meibj")]
position = Vector2(-260, -120)

[node name="LapDisplay" parent="Control" instance=ExtResource("4_nysx1")]

[node name="ThrottleDisplay" parent="Control" instance=ExtResource("5_gj1ct")]

[node name="CarVisu3d" parent="Control" instance=ExtResource("6_f3nql")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 1000.0
offset_bottom = 1000.0
grow_horizontal = 1
grow_vertical = 1
